# tesira2mqtt

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
config/: config.yaml.example
src/tesira2mqtt/: config.py  main.py  utils.py
src/tesira2mqtt/bridge/: coordinator.py  discovery.py  mqtt.py
src/tesira2mqtt/tesira/: client.py  protocol.py
src/tesira_bridge/: config.py  main.py
src/tesira_bridge/bridge/: coordinator.py  discovery.py  mqtt.py
src/tesira_bridge/tesira/: client.py  models.py  protocol.py
tests/: test_config.py  test_protocol.py  test_utils.py
